--- a/pom.xml
+++ b/pom.xml
@@ -64,20 +64,25 @@
 	                            <ignore />
 	                          </action>
 	                        </pluginExecution>
+
+                            <!--
 	                        <pluginExecution>
 	                          <pluginExecutionFilter>
 	                          	<groupId>org.codehaus.mojo</groupId>
 	                          	<artifactId>buildnumber-maven-plugin</artifactId>
-	                            <versionRange>[1.0.0,)</versionRange>
+	                            <versionRange>1.3</versionRange>
 	                            <goals>
-	                              <goal>hgchangeset</goal>
+	                              <goal>create</goal>
 	                            </goals>
 	                          </pluginExecutionFilter>
 	                          <action>
 	                            <ignore />
 	                          </action>
 	                        </pluginExecution>
+                            -->
+
 	                      </pluginExecutions>
+
 	                    </lifecycleMappingMetadata>
 	                  </configuration>
 	                </plugin>
@@ -441,15 +446,49 @@
                         </execution>
                     </executions>
                 </plugin>
+                <!--
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>buildnumber-maven-plugin</artifactId>
-                    <version>1.0</version>
+                    <version>1.3</version>
+                    <executions>
+                        <execution>
+                            <id>buildnumber</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>create</goal>
+                            </goals>
+                            <configuration>
+                                <doCheck>false</doCheck>
+                                <doUpdate>false</doUpdate>
+                                <shortRevisionLength>12</shortRevisionLength>
+                                <buildNumberPropertyName>changeSet</buildNumberPropertyName>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>timestamp</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>create-timestamp</goal>
+                            </goals>
+                            <configuration>
+                                <timestampPropertyName>changeSetDate</timestampPropertyName>
+                                <timestampFormat>yyyy-MM-dd HH:mm Z</timestampFormat>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                -->
+                <!--
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>1.3</version>
                     <executions>
                         <execution>
                             <phase>validate</phase>
                             <goals>
-                                <goal>hgchangeset</goal>
+                                <goal>create</goal>
                             </goals>
                         </execution>
                     </executions>
@@ -458,6 +497,7 @@
                         <doUpdate>true</doUpdate>
                     </configuration>
                 </plugin>
+                -->
                 <plugin>
                     <groupId>org.jvnet.jaxb2.maven2</groupId>
                     <artifactId>maven-jaxb2-plugin</artifactId>
@@ -537,22 +577,34 @@
                 <updatePolicy>never</updatePolicy>
             </snapshots>
         </repository>
+
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>maven-central</id>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+
     </repositories>
     <pluginRepositories>
-        <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>plugins-release</name>
-            <url>https://dev.openclinica.com/artifactory/plugins-release</url>
-        </pluginRepository>
-        <pluginRepository>
-            <snapshots />
-            <id>snapshots</id>
-            <name>plugins-snapshot</name>
-            <url>https://dev.openclinica.com/artifactory/plugins-snapshot</url>
-        </pluginRepository>
+            <pluginRepository>
+                <snapshots>
+                    <enabled>false</enabled>
+                </snapshots>
+                <id>central</id>
+                <name>plugins-release</name>
+                <url>https://dev.openclinica.com/artifactory/plugins-release</url>
+            </pluginRepository>
+            <pluginRepository>
+                <snapshots />
+                <id>snapshots</id>
+                <name>plugins-snapshot</name>
+                <url>https://dev.openclinica.com/artifactory/plugins-snapshot</url>
+            </pluginRepository>
         <pluginRepository>
             <id>jboss-public-repository-group</id>
             <name>JBoss Public Repository Group</name>
@@ -563,6 +615,16 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>maven-central</id>
+            <url>http://repo1.maven.org/maven2</url>
         </pluginRepository>
     </pluginRepositories>
 
