--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.akaza.openclinica</groupId>
     <artifactId>OpenClinica</artifactId>
     <packaging>pom</packaging>
-  <version>3.3-SNAPSHOT</version>
+  <version>3.3-bespoke-1-SNAPSHOT</version>
     <name>OpenClinica</name>
     <description>OpenClinica 3.1-SNAPSHOT</description>
 
